Bugfix - changed index img width to avoid overflow on mobile

--- a/assets/sass/components/_image.scss
+++ b/assets/sass/components/_image.scss
@@ -1,5 +1,5 @@
 .index__img {
-    width: 450px;
+    width: 400px;
     height: 500px;
     -o-object-fit: cover;
     object-fit: cover;
